--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Labs</string>
+    <string name="channel_name">New Message Notifications</string>
+    <string name="channel_description">Notifications about new messages</string>
 </resources>
